--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
     <div class="botao">
         <button type="submit">Entrar</button>
     </div>
-
+    <div class="cancelar">
+        <button type="submit">cancelar</button>
+    </div>
+    <div class="redefinir">
+        <p>redefinir</p>
+    </div
 </main>
 </body>
 </html>
