https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 <main>
+    <header>
+    <div class="logomarca">
+        <img class="logo" src="logomarca.jpeg" alt="aqua">
+    </div>
+    </header>
     <div class="Login">
         <label for="usuario_email">E-mail ou Usuário:</label>
         <input
