https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <main>
+<section>
     <header>
     <div class="logomarca">
         <img class="logo" src="logomarca.jpeg" alt="aqua">
@@ -37,6 +38,7 @@
     <div class="redefinir">
         <p>redefinir</p>
     </div
+    </section>
 </main>
 </body>
 </html>
