https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 <main>
-<section>
     <header>
     <div class="logomarca">
         <img class="logo" src="logomarca.jpeg" alt="aqua">
     </div>
     </header>
+<div class="bloco-cadastro">    
     <div class="Login">
         <label for="usuario_email">E-mail ou Usuário:</label>
         <input
@@ -21,7 +21,7 @@
         name="usuario-email"
         required>
     </div>
-    <div class="senha">
+    <div class="senha-cadastro">
         <label for="senha">senha:</label>
         <input
         type="password"
@@ -29,6 +29,7 @@
         name="senha"
         required>
     </div>
+</div>   
     <div class="botao">
         <button type="submit">Entrar</button>
     </div>
@@ -38,7 +39,6 @@
     <div class="redefinir">
         <p>redefinir</p>
     </div
-    </section>
 </main>
 </body>
 </html>
