https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 <div class="bloco-cadastro">    
     <div class="Login">
-        <label for="usuario_email">E-mail ou Usuário:</label>
+        <label for="usuario_email">Login:</label>
         <input
         type="e-mail"
         id="usuario-email"
@@ -22,7 +22,7 @@
         required>
     </div>
     <div class="senha-cadastro">
-        <label for="senha">senha:</label>
+        <label for="senha">Senha:</label>
         <input
         type="password"
         id="senha"
