https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
         required>
     </div>
 </div>   
+<div class="organize">    
     <div class="botao">
         <button type="submit">Entrar</button>
     </div>
     <div class="cancelar">
         <button type="submit">cancelar</button>
     </div>
+</div>
     <div class="redefinir">
         <p>redefinir</p>
     </div>
