https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 </div>
     <div class="redefinir">
-        <p>redefinir</p>
+        <a><p>redefinir</p></a>
     </div>
 </main>
 </body>
