https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 <main>
     <header>
-    <div class="logomarca">
+<div class="centralizar">   
+        <div class="logomarca">
         <img class="logo" src="logomarca.jpeg" alt="aqua">
     </div>
     </header>
@@ -41,6 +42,7 @@
     <div class="redefinir">
         <a><p>redefinir</p></a>
     </div>
+</div> 
 </main>
 </body>
 </html>
