https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="Login">
         <label for="usuario_email">Login:</label>
         <input
-        type="e-mail"
-        id="usuario-email"
+        type="email"
+        id="usuario_email"
         name="usuario-email"
         required>
     </div>
@@ -39,7 +39,7 @@
     </div>
 </div>
     <div class="redefinir">
-        <a><p>redefinir</p></a>
+        <p>redefinir</p>
 </div> 
 </main>
 </body>
