--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
 </div>   
 <div class="organize">    
     <div class="botao">
+        <form class="botao-entrar"> 
         <button type="submit">Entrar</button>
+        </form>
     </div>
     <div class="cancelar">
+        <form class="botao-cancelar">
         <button type="submit">cancelar</button>
+        </form>
     </div>
 </div>
     <div class="redefinir">
