https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
         required>
     </div>
 </div>   
-<div class="organize">    
-    <div class="botao">
-        <form class="botao-entrar"> 
-        <button type="submit">Entrar</button>
-        </form>
-    </div>
+<div class="organize">       
+    <form class="botao-entrar"> 
+        <input type="submit">
+    </form>
     <div class="cancelar">
         <form class="botao-cancelar">
         <button type="submit">cancelar</button>
