--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>   
 <div class="organize">       
     <form class="botao-entrar"> 
-        <button>Entrar</button>
+        <button type="submit">Entrar</button>
     </form>
     <div class="cancelar">
         <form class="botao-cancelar">
