https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>   
 <div class="organize">       
     <form class="botao-entrar"> 
-        <button type="submit">Entrar</button>
+        <button class="entrar" type="submit">Entrar</button>
     </form>
     <div class="cancelar">
         <form class="botao-cancelar">
