--- a/index.html
+++ b/index.html
@@ -14,20 +14,24 @@
     </header>
 <div class="bloco-cadastro">    
     <div class="Login">
+    <form class="login-cadastro">
         <label for="usuario_email">Login:</label>
         <input
         type="email"
         id="usuario_email"
         name="usuario-email"
         required>
+    </form>
     </div>
     <div class="senha-cadastro">
+    <form class="senha_cadastro">
         <label for="senha">Senha:</label>
         <input
         type="password"
         id="senha"
         name="senha"
         required>
+    </form>
     </div>
 </div>   
 <div class="organize">       
@@ -35,9 +39,9 @@
         <button class="entrar" type="submit">Entrar</button>
     </form>
     <div class="cancelar">
-        <form class="botao-cancelar">
+    <form class="botao-cancelar">
         <button type="submit">cancelar</button>
-        </form>
+    </form>
     </div>
 </div>
     <div class="redefinir">
