--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <main>
+<nav>
     <header>
         <div class="logomarca">
         <img class="logo" src="logomarca.jpeg" alt="aqua">
@@ -25,6 +26,7 @@
     </div>
     <div class="senha-cadastro">
         <label for="senha">Senha:</label>
+        <form class="senha_cadastro">
         <input
         type="password"
         id="senha"
@@ -45,7 +47,8 @@
 </div>
     <div class="redefinir">
         <p>redefinir</p>
-</div> 
+</div>
+</nav> 
 </main>
 </body>
 </html>
