https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <meta nameport="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+<main>
+    <header>
+        <img class="logo" src="logomarca.jpeg" alt="aqua">
+    </header>
+<nav>
+    <form class="login-cadastro">
+        <label for="username">Login</label>
+        <input
+        type="text"
+        id="username"
+        name="Login"
+        required>
+    </form>
 
+</nav>
+</main>
 </body>
 </html>
