--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 <main>
     <header>
+    <div class="aqua">
         <img class="logo" src="logomarca.jpeg" alt="aqua">
+    </div>
     </header>
 <nav>
     <form class="login-cadastro">
