https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -14,14 +14,27 @@
     </header>
 <nav>
     <form class="login-cadastro">
-        <label for="username">Login</label>
+        <label for="username">Login:</label>
         <input
         type="text"
         id="username"
         name="Login"
         required>
     </form>
-
+    <form class="senha-cadastro">
+        <label for="password">Senha:</label>
+        <input 
+        type="password"
+        id="password"
+        name="senha"
+        required>
+    </form>
+    <div class="entrar">
+        <button class="botao-entrar" type="submit">Entrar</button>
+    </div>
+    <div class="Cancelar">
+        <button class="botao-cancelar" type="submit">Cancelar</button>  
+    </div>
 </nav>
 </main>
 </body>
