https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </div>
     </header>
 <nav>
+<div class="cadastro">    
     <form class="login-cadastro">
         <label for="username">Login:</label>
         <input
@@ -29,6 +30,7 @@
         name="senha"
         required>
     </form>
+</div>
     <div class="entrar">
         <button class="botao-entrar" type="submit">Entrar</button>
     </div>
