https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <img class="logo" src="logomarca.jpeg" alt="aqua">
     </div>
     </header>
-<nav>
-<div class="cadastro">    
+<nav>   
     <form class="login-cadastro">
         <label for="username">Login:</label>
         <input
@@ -30,11 +29,8 @@
         name="senha"
         required>
     </form>
-</div>
-    <div class="entrar">
+    <div class="botoes">
         <button class="botao-entrar" type="submit">Entrar</button>
-    </div>
-    <div class="Cancelar">
         <button class="botao-cancelar" type="submit">Cancelar</button>  
     </div>
 </nav>
