--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         required>
     </form>
     <div class="botoes">
-        <button class="botao-entrar" type="submit">Entrar</button>
-        <button class="botao-cancelar" type="submit">Cancelar</button>  
+        <a href="pagina-2.html">
+            <button class="botao-entrar" type="button">Entrar</button>
+        </a>
+        <button class="botao-cancelar" type="button">Cancelar</button>  
     </div>
 </nav>
 </main>
