--- a/cadastro.html
+++ b/cadastro.html
@@ -6,8 +6,13 @@
     <meta nameport="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
-
+<header>
+    <ul>
+        <li><a href="index.html">Sair</a></li>
+    </ul>
+</header>
+    <h1>Cadastro de Produto</h1>
+    
 
 
 </body>
