--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         required>
     </form>
     <div class="botoes">
-        <a href="pagina-2.html">
+        <a href="cadastro.html">
             <button class="botao-entrar" type="button">Entrar</button>
         </a>
         <button class="botao-cancelar" type="button">Cancelar</button>  
