--- a/cadastro.html
+++ b/cadastro.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <meta nameport="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
@@ -11,8 +13,36 @@
             </li>
         </ul>
     </header>
-    <h1>Cadastro de Produto</h1>
-
-
+    <h2>Cadastro de Produto</h2>
+<main>
+<form class="nome_produto">
+    <label for="id_nome_produto">Nome do Produto:</label>
+    <input
+    type="text"
+    id="id_nome_produto"
+    name="Nome_Produto"
+    required>
+</form>
+<form class="tipo_produto">
+    <label for="id_tipo_produto">Tipo do Produto:</label>
+    <input
+    type="text"
+    id="id_tipo_produto"
+    name="Tipo_Produto"
+    required>
+</form>
+<form class="codigo_produto">
+    <label for="id_codigo_produto">Codigo do Produto:</label>
+    <input
+    type="number"
+    id="id_codigo_produto"
+    name="Codigo_Produto"
+    required>
+</form>
+<div class="botoes">
+    <button class="botao-cadastrar" type="button">Cadastrar</button>
+    <button class="botao-cancelar" type="button">Cancelar</button>
+</div>
+</main>
 </body>
 </html>
