https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </a>
         <button class="botao-cancelar" type="button">Cancelar</button>  
     </div>
+<a class="redefinir">Redefinir</a>
 </nav>
 </main>
 </body>
