--- a/cadastro.html
+++ b/cadastro.html
@@ -9,7 +9,7 @@
     <header>
        <ul>
             <li>
-                <a href="index.html">Sair</a>
+                <a  class="sair" href="index.html">Sair</a>
             </li>
         </ul> 
     </header>
