https://github.com/Aylton-dev/Formulario-2.git

--- a/cadastro.html
+++ b/cadastro.html
@@ -9,7 +9,7 @@
     <header>
        <ul>
             <li>
-                <a  class="sair" href="index.html">Sair</a>
+                <a href="index.html">Sair</a>
             </li>
         </ul> 
     </header>
