--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         </a>
         <button class="botao-cancelar" type="button">Cancelar</button>  
     </div>
+<ul>
+    <li>
+        <a class="redefinir" href="redefinir senha">Redefinir</a>
+    </li>
+</ul>
 </nav>
 </main>
 </body>
