https://github.com/Aylton-dev/Formulario-2.git

--- a/cadastro.html
+++ b/cadastro.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-       <ul>
+       <ul class="ul-cadastro">
             <li>
                 <a class="sair" href="index.html">Sair</a>
             </li>
