--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </a>
         <button class="botao-cancelar" type="button">Cancelar</button>  
     </div>
-<ul>
+<ul class="ul-login">
     <li>
         <a class="redefinir" href="redefinir senha">Redefinir</a>
     </li>
