https://github.com/Aylton-dev/Formulario-2.git

--- a/cadastro.html
+++ b/cadastro.html
@@ -8,7 +8,7 @@
 <body>
     <header>
        <ul class="ul-cadastro">
-            <li>
+            <li class="li-cadastro">
                 <a class="sair" href="index.html">Sair</a>
             </li>
         </ul> 
