--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <button class="botao-cancelar" type="button">Cancelar</button>  
     </div>
 <ul class="ul-login">
-    <li>
+    <li class="li-login">
         <a class="redefinir" href="redefinir senha">Redefinir</a>
     </li>
 </ul>
