--- a/cadastro.html
+++ b/cadastro.html
@@ -44,5 +44,7 @@
     <button class="botao-cancelar" type="button">Cancelar</button>
 </div>
 </main>
+
+<script src="script.js"></script>
 </body>
 </html>
