--- a/cadastro.html
+++ b/cadastro.html
@@ -40,7 +40,7 @@
     required>
 </form>
 <div class="botoes">
-    <button class="botao-cadastrar" type="button">Cadastrar</button>
+    <button id="botao-cadastrar" type="button">Cadastrar</button>
     <button class="botao-cancelar" type="button">Cancelar</button>
 </div>
 </main>
