https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </form>
     <div class="botoes">
         <a href="cadastro.html">
-            <button class="botao-entrar" type="button">Entrar</button>
+            <button id="botao-entrar" type="button">Entrar</button>
         </a>
         <button class="botao-cancelar" type="button">Cancelar</button>  
     </div>
@@ -43,5 +43,6 @@
 </nav>
 </main>
 
+<script src="script.js"></script>
 </body>
 </html>
