https://github.com/Aylton-dev/Formulario-2.git

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         required>
     </form>
     <div class="botoes">
-        <a id="link-conexao" href="cadastro.html">
+        <a href="cadastro.html" id="link-conexao">
             <button id="botao-entrar" type="button">Entrar</button>
         </a>
         <button class="botao-cancelar" type="button">Cancelar</button>  
@@ -40,9 +40,13 @@
         <a class="redefinir" href="redefinir senha">Redefinir</a>
     </li>
 </ul>
-</nav>
-</main>
 
 <script src="script.js"></script>
+
+</nav>
+
+</main>
+
+
 </body>
 </html>
